demo/src/main/java/com/example/demo/web/error/ConflictException.java
package com.example.demo.web.error;

public class ConflictException extends RuntimeException {
    public ConflictException(String message) {
        super(message);
    }
}
